--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,17 @@ edition = "2021"
 [dependencies]
 rand = "0.8.5"
 
+[dependencies.bevy]
+version = "0.12.1"
+default-features = false
+features = [
+    "bevy_winit",
+    "bevy_core_pipeline",
+    "bevy_render",
+    "bevy_text",
+    "webgl2"
+]
+
 [dev-dependencies]
 criterion = "0.4"
 
