Update dependencies, in particular Bevy to 16
Note that we stay on rand 0.8, because 0.9 makes the wasm build complicated

--- a/crates/othello_gui/Cargo.toml
+++ b/crates/othello_gui/Cargo.toml
@@ -8,12 +8,14 @@ othello_ai = { path = "../othello_ai" }
 othello_game = { path = "../othello_game" }
 
 [dependencies.bevy]
-version = "0.12.1"
+version = "0.16"
 default-features = false
 features = [
-    "bevy_winit",
     "bevy_core_pipeline",
+    "bevy_gizmos",
+    "bevy_log",
     "bevy_render",
     "bevy_text",
+    "bevy_winit",
     "webgl2"
 ]
