--- a/.github/workflows/othello-gui.yml
+++ b/.github/workflows/othello-gui.yml
@@ -47,6 +47,6 @@ jobs:
       uses: peaceiris/actions-gh-pages@v3
       if: github.ref == 'refs/heads/master'
       with:
-        deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+        github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: wasm/target
         destination_dir: gui
